--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{ react_component('ReactAdmin') }}
+    <div {{ react_component('ReactAdmin', {
+        entrypoint: path('api_entrypoint')
+    }) }}></div>
 {% endblock %}
