bootstrapping vue app from old project

--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    Hi!
+    <div {{ vue_component('TreasureConnectApp', {
+        entrypoint: path('api_entrypoint')
+    }) }}></div>
 {% endblock %}
