[tuts-apply-diff] Applying existing diff file for step userinjs-set-global-user-variable

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,10 @@
         {% endblock %}
     </head>
     <body>
+        <script>
+            window.user = {{ app.user|serialize('jsonld')|raw }};
+        </script>
+
         {% block body %}{% endblock %}
     </body>
 </html>
