[tuts-apply-diff] Applying existing diff file for step userinjs-try-to-pass-user-into-vue

--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
     <div {{ vue_component('TreasureConnectApp', {
-        entrypoint: path('api_entrypoint')
+        entrypoint: path('api_entrypoint'),
+        user: app.user
     }) }}></div>
 {% endblock %}
