[tuts-apply-diff] Applying existing diff file for step userinjs-normalize-in-controller

--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -3,6 +3,6 @@
 {% block body %}
     <div {{ vue_component('TreasureConnectApp', {
         entrypoint: path('api_entrypoint'),
-        user: app.user
+        user: userData,
     }) }}></div>
 {% endblock %}
