[tuts-apply-diff] Applying existing diff file for step apitoken-send-tokens-to-frontend

--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -4,5 +4,6 @@
     <div {{ vue_component('TreasureConnectApp', {
         entrypoint: path('api_entrypoint'),
         user: userData,
+        tokens: app.user ? app.user.validTokenStrings : null
     }) }}></div>
 {% endblock %}
